# kent

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  go.mod  go.sum
.builder/plans/: BUI-13-auto-repair-missing-tool-outputs.md  bui-15-workflow-task-comments-reminder.md
.builder/qa/: BUI-13-QA-summary.md  bui-15-qa-evidence.md
.claude/: skills
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
apps/: AGENTS.md  dependency-policy.json  dependency-policy.schema.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/desktop/: .prettierignore  dev-showcase.html  eslint-app-plugin.js  eslint-builder-plugin.js  eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/icons/Kent.icon/: icon.json
apps/desktop/src-tauri/icons/source/Kent.icon/: icon.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  native_glass.rs
apps/scripts/: check-dependency-policy.mjs  check-dependency-policy.test.mjs  check-desktop-font-assets.mjs  check-eslint-app-plugin.test.mjs  check-eslint-builder-plugin.test.mjs  check-eslint-policy.test.mjs  check-typescript-policy.mjs  check-typescript-policy.test.mjs
apps/shared/: README.md
cli/actions/: registry.go  registry_test.go
cli/app/: app.go  app_test.go  auth_callback_page.go  auth_callback_page_test.go  auth_gate.go  auth_gate_test.go  auth_oauth_presenter.go  auth_oauth_presenter_test.go  auth_picker.go  auth_picker_test.go  auth_success_screen.go  background_test_helpers_test.go  bootstrap.go  bootstrap_test.go  controller_lease_test.go  embedded_server.go  embedded_server_auth_test.go  embedded_server_part2_test.go  embedded_server_test.go  headless_prompt_server_test.go  launch_planner.go  launch_planner_test.go  main_surface_terminal_guard_test.go  manual_alt_screen_input_repro_test.go  native_projection_test_helpers_test.go  native_scrollback_ledger_guard_test.go  onboarding_flow.go  onboarding_imports.go  onboarding_model.go  onboarding_part2_test.go  onboarding_render.go  (+234 more)
docs/: astro.config.mjs  package.json  pnpm-lock.yaml
prompts/: compaction_soon_reminder.md  compaction_soon_reminder_trigger_handoff.md  embed.go  embed_test.go  generated_sync.go  generated_sync_test.go  handoff.go  handoff_test.go  reviewer_system_prompt.md  selfcmd.go  selfcmd_test.go  system_prompt.md  tool_preambles_prompt.md  worktree_mode_exit_prompt.md  worktree_mode_prompt.md
scripts/: build-desktop.sh  build.sh  capture-gui-browser-proof.sh  capture-gui-gap-proof.sh  capture-gui-ui-showcase-proof.sh  capture-native-dialog-proof.sh  ci-check.sh  desktop-release.sh  import_gh.sh  release-artifacts.sh  scripts_test.go  test.sh  update-brew-tap.sh  validate-gui-gap-proof.sh
(+1580 files in other folders)
