[package]
name = "builder-desktop"
version = "0.0.0"
description = "Builder desktop client"
authors = ["Builder contributors"]
edition = "2021"
license = "AGPL-3.0-only"

[lib]
name = "builder_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
toml = "0.9"
