[package]
name = "app-desktop"
version = "0.0.0"
description = "Kent desktop client"
authors = ["Kent contributors"]
edition = "2021"
license = "AGPL-3.0-only"

[lib]
name = "app_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["sync"] }
toml = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSColor", "NSGlassEffectView", "NSResponder", "NSView", "NSVisualEffectView", "NSWindow"] }
objc2-foundation = { version = "0.3.2", features = ["NSProcessInfo"] }
