[package]
name = "app-desktop"
version = "0.0.0"
description = "Kent desktop client"
authors = ["Respawn LLC <support@respawn.pro>"]
edition = "2021"
license = "AGPL-3.0-only"

[lib]
name = "app_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
# Required at the crate root by tauri::generate_context! once the updater plugin
# is configured (the generated context references serde_json).
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["sync"] }
toml = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSColor", "NSGlassEffectView", "NSResponder", "NSView", "NSVisualEffectView", "NSWindow"] }
objc2-foundation = { version = "0.3.2", features = ["NSProcessInfo"] }

# Release profile tuned for distributable bundle size: full LTO, a single
# codegen unit, size-optimized codegen, abort-on-panic, and stripped symbols.
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
